--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,9 @@
 <footer class="footer">
     MenteHiTech © 2026 — Tecnologia com Propósito
 </footer>
-
+<a href="https://wa.me/5574981115425" class="whatsapp-float" target="_blank">
+    💬
+</a>
 </body>
 <header class="header">
     <div class="logo">MenteHiTech</div>
