--- a/templates/precos.html
+++ b/templates/precos.html
@@ -69,6 +69,8 @@
 <footer class="footer">
     MenteHiTech © 2026 — Tecnologia com Propósito
 </footer>
-
+<a href="https://wa.me/5574981115425" class="whatsapp-float" target="_blank">
+    💬
+</a>
 </body>
 </html>
