add checkout button

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,9 @@
     <a href="/servicos" class="btn glow">
         Começar Agora
     </a>
-
+<a href="/checkout" class="btn glow premium-btn">
+Ativar Estrutura Digital
+</a>
 </section>
 
 
