update navbar premium

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,9 @@
         <a href="/">Início</a>
         <a href="/servicos">Serviços</a>
         <a href="/precos">Preços</a>
-        <a href="/contato" class="btn-nav">Contato</a>
+        <a href="/checkout" class="btn-nav premium-nav">
+            Ativar Premium
+        </a>
     </nav>
 </header>
 
